# github-scraper

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.scrapyd  README.md  apitest.json  docker-compose.yml  log  pyproject.toml  scraper.json  scrapy.cfg  scrapyd.conf  scrapydweb_settings_v10.py  test.txt
api/: Dockerfile  nohup.out  requirements.txt
api/api/: settings.py  urls.py
api/ghubscraper/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api/ghubscraper/migrations/: 0001_initial.py  0002_alter_repo_account.py
scraper/: Dockerfile  items.py  middlewares.py  pipelines.py  requirements.txt  scrapy.cfg  settings.py  setup.py
scraper/scraper/: items.py  pipelines.py  settings.py
scraper/scraper/spiders/: scraper_api_spider.py  scraper_mongo_spider.py  scraper_spider.py
scraper/spiders/: __init__.py  scraper_api_spider.py  scraper_spider.py
scrapyd/: Dockerfile  requirements.txt
scrapydweb/: Dockerfile  requirements.txt  scrapydweb_settings_v10.py
