[tool.poetry]
name = "ghubscraper"
version = "0.1.0"
description = "An app to scrape GitHub accounts, collecting info on rep"
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
