[tool.poetry]
name = "ghubscraper"
version = "0.1.0"
description = "An app to scrape GitHub accounts, collecting info on rep"
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.1"
pymongo = "^4.0.2"
scrapyd = "^1.3.0"
scrapyd-client = "^1.2.0"
scrapydweb = "^1.4.0"
logparser = "^0.8.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
